--- a/src/app/routes/dashboard/welcome/welcome.component.html
+++ b/src/app/routes/dashboard/welcome/welcome.component.html
@@ -57,9 +57,13 @@
     <nz-spin [nzSpinning]="loadingPickByLocationGroupCount">
 
       <nz-card  nzTitle="Picks By Location Group">
-        <div *ngFor="let pick of picksByLocationGroup | keyvalue">
-            <span>{{ pick.key }} ({{pick.value[1] }} /  {{ pick.value[0]}})</span> <g2-mini-progress [percent]=" pick.value[1] * 100 / pick.value[0]" strokeWidth="14" [target]="pick.value[0]"></g2-mini-progress> 
-        </div>
+        @for (pick of picksByLocationGroup; track pick) {
+        
+          <div>
+            <span>{{ pick[0] }} ({{pick[1][1] }} /  {{ pick[1][0]}})</span> <g2-mini-progress [percent]=" pick[1][1] * 100 / pick[1][0]" strokeWidth="14" [target]="pick[1][0]"></g2-mini-progress> 
+          </div>
+        }
+
     </nz-card>
     </nz-spin>
   </div>
