--- a/src/app/routes/alert/configuration/configuration.component.html
+++ b/src/app/routes/alert/configuration/configuration.component.html
@@ -2,131 +2,133 @@
 
 
 <nz-spin [nzSpinning]="isSpinning" [nzSize]="'large'">
-    
-<div *ngIf="currentEmailAlertConfiguration != null">
+@if(currentEmailAlertConfiguration != null) {
 
-    <div nz-row [nzGutter]="24">
-        <div nz-col [nzSpan]="12">
-            <nz-form-item nzFlex>
-                <nz-form-label [nzSpan]="6">
-                    {{ 'host' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18">                
-                    <input nz-input [(ngModel)]="currentEmailAlertConfiguration!.host" /> 
-                </nz-form-control>
-            </nz-form-item>
+    <div>
+
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="12">
+                <nz-form-item nzFlex>
+                    <nz-form-label [nzSpan]="6">
+                        {{ 'host' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18">                
+                        <input nz-input [(ngModel)]="currentEmailAlertConfiguration!.host" /> 
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col [nzSpan]="12">
+                <nz-form-item nzFlex>
+                    <nz-form-label [nzSpan]="6">
+                        {{ 'port' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18">                
+                        <nz-input-number [(ngModel)]="currentEmailAlertConfiguration!.port"  [nzMin]="0" [nzMax]="65524" [nzStep]="1"></nz-input-number> 
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+        </div> 
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="12">
+                <nz-form-item nzFlex>
+                    <nz-form-label [nzSpan]="6">
+                        {{ 'username' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18">                
+                        <input nz-input [(ngModel)]="currentEmailAlertConfiguration!.username" /> 
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+        </div> 
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="12">
+                <nz-form-item nzFlex>
+                    <nz-form-label [nzSpan]="6">
+                        {{ 'password' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18">   
+                        <nz-input-group [nzSuffix]="suffixTemplate">             
+                            <input nz-input [type]="passwordVisible ? 'text' : 'password'"
+                            [(ngModel)]="currentEmailAlertConfiguration!.password" /> 
+                        </nz-input-group>
+                        <ng-template #suffixTemplate>
+                          <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
+                            (click)="passwordVisible = !passwordVisible"></i>
+                        </ng-template>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
         </div>
-        <div nz-col [nzSpan]="12">
-            <nz-form-item nzFlex>
-                <nz-form-label [nzSpan]="6">
-                    {{ 'port' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18">                
-                    <nz-input-number [(ngModel)]="currentEmailAlertConfiguration!.port"  [nzMin]="0" [nzMax]="65524" [nzStep]="1"></nz-input-number> 
-                </nz-form-control>
-            </nz-form-item>
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="12">
+                <nz-form-item nzFlex>
+                    <nz-form-label [nzSpan]="6">
+                        {{ 'sendFromEmail' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18">                
+                        <input nz-input [(ngModel)]="currentEmailAlertConfiguration!.sendFromEmail" /> 
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
         </div>
-    </div> 
-    <div nz-row [nzGutter]="24">
-        <div nz-col [nzSpan]="12">
-            <nz-form-item nzFlex>
-                <nz-form-label [nzSpan]="6">
-                    {{ 'username' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18">                
-                    <input nz-input [(ngModel)]="currentEmailAlertConfiguration!.username" /> 
-                </nz-form-control>
-            </nz-form-item>
+        
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="12">
+                <nz-form-item nzFlex>
+                    <nz-form-label [nzSpan]="6">
+                        {{ 'transportProtocol' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18">
+                        <input nz-input [(ngModel)]="currentEmailAlertConfiguration!.transportProtocol" />  
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
         </div>
-    </div> 
-    <div nz-row [nzGutter]="24">
-        <div nz-col [nzSpan]="12">
-            <nz-form-item nzFlex>
-                <nz-form-label [nzSpan]="6">
-                    {{ 'password' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18">   
-                    <nz-input-group [nzSuffix]="suffixTemplate">             
-                        <input nz-input [type]="passwordVisible ? 'text' : 'password'"
-                        [(ngModel)]="currentEmailAlertConfiguration!.password" /> 
-                    </nz-input-group>
-                    <ng-template #suffixTemplate>
-                      <i nz-icon [nzType]="passwordVisible ? 'eye-invisible' : 'eye'"
-                        (click)="passwordVisible = !passwordVisible"></i>
-                    </ng-template>
-                </nz-form-control>
-            </nz-form-item>
+        
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="12">
+                <nz-form-item nzFlex>
+                    <nz-form-label [nzSpan]="6">
+                        {{ 'authFlag' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18">
+                        <nz-switch [(ngModel)]="currentEmailAlertConfiguration!.authFlag"></nz-switch>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
         </div>
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="12">
+                <nz-form-item nzFlex>
+                    <nz-form-label [nzSpan]="6">
+                        {{ 'starttlsEnableFlag' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18">
+                        <nz-switch [(ngModel)]="currentEmailAlertConfiguration!.starttlsEnableFlag"></nz-switch>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+        </div>
+        <div nz-row [nzGutter]="24">
+            <div nz-col [nzSpan]="12">
+                <nz-form-item nzFlex>
+                    <nz-form-label [nzSpan]="6">
+                        {{ 'debugFlag' | i18n }}
+                    </nz-form-label>
+                    <nz-form-control [nzSpan]="18">
+                        <nz-switch [(ngModel)]="currentEmailAlertConfiguration!.debugFlag"></nz-switch>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+        </div>
+        
+        
+        <div nz-row nzType="flex" nzJustify="start" *ngIf="!displayOnly">
+            <button nz-button nzType="primary" (click)="saveConfiguration()">
+                {{ 'confirm' | i18n }}
+            </button>
+        </div>
+        
     </div>
-    <div nz-row [nzGutter]="24">
-        <div nz-col [nzSpan]="12">
-            <nz-form-item nzFlex>
-                <nz-form-label [nzSpan]="6">
-                    {{ 'sendFromEmail' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18">                
-                    <input nz-input [(ngModel)]="currentEmailAlertConfiguration!.sendFromEmail" /> 
-                </nz-form-control>
-            </nz-form-item>
-        </div>
-    </div>
-    
-    <div nz-row [nzGutter]="24">
-        <div nz-col [nzSpan]="12">
-            <nz-form-item nzFlex>
-                <nz-form-label [nzSpan]="6">
-                    {{ 'transportProtocol' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18">
-                    <input nz-input [(ngModel)]="currentEmailAlertConfiguration!.transportProtocol" />  
-                </nz-form-control>
-            </nz-form-item>
-        </div>
-    </div>
-    
-    <div nz-row [nzGutter]="24">
-        <div nz-col [nzSpan]="12">
-            <nz-form-item nzFlex>
-                <nz-form-label [nzSpan]="6">
-                    {{ 'authFlag' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18">
-                    <nz-switch [(ngModel)]="currentEmailAlertConfiguration!.authFlag"></nz-switch>
-                </nz-form-control>
-            </nz-form-item>
-        </div>
-    </div>
-    <div nz-row [nzGutter]="24">
-        <div nz-col [nzSpan]="12">
-            <nz-form-item nzFlex>
-                <nz-form-label [nzSpan]="6">
-                    {{ 'starttlsEnableFlag' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18">
-                    <nz-switch [(ngModel)]="currentEmailAlertConfiguration!.starttlsEnableFlag"></nz-switch>
-                </nz-form-control>
-            </nz-form-item>
-        </div>
-    </div>
-    <div nz-row [nzGutter]="24">
-        <div nz-col [nzSpan]="12">
-            <nz-form-item nzFlex>
-                <nz-form-label [nzSpan]="6">
-                    {{ 'debugFlag' | i18n }}
-                </nz-form-label>
-                <nz-form-control [nzSpan]="18">
-                    <nz-switch [(ngModel)]="currentEmailAlertConfiguration!.debugFlag"></nz-switch>
-                </nz-form-control>
-            </nz-form-item>
-        </div>
-    </div>
-    
-    
-    <div nz-row nzType="flex" nzJustify="start" *ngIf="!displayOnly">
-        <button nz-button nzType="primary" (click)="saveConfiguration()">
-            {{ 'confirm' | i18n }}
-        </button>
-    </div>
-    
-</div>
+}
 </nz-spin>
