--- a/src/app/routes/auth/department-maintenance/department-maintenance.component.html
+++ b/src/app/routes/auth/department-maintenance/department-maintenance.component.html
@@ -27,67 +27,80 @@
   -->
 
 
+@if(stepIndex === 0) {
 
-<div class="small-card" *ngIf="stepIndex === 0" style="padding-top: 20px;">
+  <div class="small-card" style="padding-top: 20px;">
 
 
-  <div nz-row [nzGutter]="24">
-    <div nz-col [nzSpan]="8">
-      <nz-form-item>
-        <nz-form-label [nzSpan]="6">
-          {{ 'name' | i18n }}
-        </nz-form-label>
-        
-        <nz-form-control [nzSpan]="12" nzHasFeedback nzErrorTip="{{ 'error.form.field.required' | i18n }}">
-            <nz-input-group>
-                <input nz-input [(ngModel)]="currentDepartment.name" [disabled]="!newDepartment"/>
-            </nz-input-group>
-        </nz-form-control>  
-      </nz-form-item>
-    </div>
-    
-    <div nz-col [nzSpan]="8">
+    <div nz-row [nzGutter]="24">
+      <div nz-col [nzSpan]="8">
         <nz-form-item>
           <nz-form-label [nzSpan]="6">
-            {{ 'description' | i18n }}
+            {{ 'name' | i18n }}
           </nz-form-label>
           
           <nz-form-control [nzSpan]="12" nzHasFeedback nzErrorTip="{{ 'error.form.field.required' | i18n }}">
               <nz-input-group>
-                  <input nz-input [(ngModel)]="currentDepartment.description" />
+                  <input nz-input [(ngModel)]="currentDepartment.name" [disabled]="!newDepartment"/>
               </nz-input-group>
           </nz-form-control>  
         </nz-form-item>
       </div>
+      
+      <div nz-col [nzSpan]="8">
+          <nz-form-item>
+            <nz-form-label [nzSpan]="6">
+              {{ 'description' | i18n }}
+            </nz-form-label>
+            
+            <nz-form-control [nzSpan]="12" nzHasFeedback nzErrorTip="{{ 'error.form.field.required' | i18n }}">
+                <nz-input-group>
+                    <input nz-input [(ngModel)]="currentDepartment.description" />
+                </nz-input-group>
+            </nz-form-control>  
+          </nz-form-item>
+        </div>
+    </div>
+    
   </div>
-  
-</div>
+}
 
 
  <!-- confirm -->
-<div class="small-card" *ngIf="stepIndex === 1" style="padding-top: 20px;">
-  <nz-card>
-    <nz-descriptions nzTitle="{{ 'department' | i18n}}" nzBordered>
-        <nz-descriptions-item nzTitle="{{ 'name' | i18n}}">
-          {{currentDepartment.name}}</nz-descriptions-item>
-        <nz-descriptions-item nzTitle="{{ 'description' | i18n}}">
-            {{currentDepartment.description}}</nz-descriptions-item>
-    </nz-descriptions>
-  </nz-card>
-</div>
+ @if(stepIndex === 1) {
+
+  <div class="small-card" style="padding-top: 20px;">
+    <nz-card>
+      <nz-descriptions nzTitle="{{ 'department' | i18n}}" nzBordered>
+          <nz-descriptions-item nzTitle="{{ 'name' | i18n}}">
+            {{currentDepartment.name}}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="{{ 'description' | i18n}}">
+              {{currentDepartment.description}}</nz-descriptions-item>
+      </nz-descriptions>
+    </nz-card>
+  </div>
+ }
 
 
 <div class="steps-action" style="padding-top: 20px;">
-  <button nz-button nzType="default" (click)="previousStep()" *ngIf="stepIndex > 0">
-    <span>{{ 'steps.previous' | i18n }}</span>
-  </button>
-  <nz-divider nzType="vertical" *ngIf="stepIndex < 1"></nz-divider>
-  <button nz-button nzType="default" (click)="nextStep()" *ngIf="stepIndex < 1">
-    <span>{{ 'steps.next' | i18n }}</span>
-  </button>
-  <nz-divider nzType="vertical"></nz-divider>
-  <button nz-button nzType="primary" (click)="confirm()" *ngIf="stepIndex === 1">
-    <span> {{ 'confirm' | i18n }}</span>
-  </button>
+  @if(stepIndex > 0) {
+
+    <button nz-button nzType="default" (click)="previousStep()" >
+      <span>{{ 'steps.previous' | i18n }}</span>
+    </button>
+  }
+  @if(stepIndex < 1) {
+    <nz-divider nzType="vertical" ></nz-divider>
+    <button nz-button nzType="default" (click)="nextStep()" >
+      <span>{{ 'steps.next' | i18n }}</span>
+    </button>
+  }
+    
+  @if(stepIndex === 1) {
+    <nz-divider nzType="vertical"></nz-divider>
+    <button nz-button nzType="primary" (click)="confirm()"  >
+      <span> {{ 'confirm' | i18n }}</span>
+    </button>
+  }
 </div>
 </nz-spin>
