--- a/src/app/routes/auth/department/department.component.html
+++ b/src/app/routes/auth/department/department.component.html
@@ -38,15 +38,20 @@
 </nz-spin>
 <ng-template #tableFoot>
 
-  <div nz-row nzType="flex" nzJustify="start" *ngIf="searchResult != ''">
-    {{searchResult}}
-  </div>
+  @if(searchResult != '') {
+
+    <div nz-row nzType="flex" nzJustify="start"  >
+      {{searchResult}}
+    </div>
+  }
   
   <div nz-row nzType="flex" nzJustify="start" style="padding: 15px;">
-    
-    <button nz-button nzType="primary" routerLink="/auth/department/maintenance" routerLinkActive="active" *ngIf="!displayOnly">
-      {{ 'add' | i18n }}
-    </button>
+    @if(!displayOnly) {
+
+      <button nz-button nzType="primary" routerLink="/auth/department/maintenance" routerLinkActive="active" >
+        {{ 'add' | i18n }}
+      </button>
+    }
   </div>
 </ng-template>
 
