--- a/src/app/routes/common/customer-address-maintenance/customer-address-maintenance.component.html
+++ b/src/app/routes/common/customer-address-maintenance/customer-address-maintenance.component.html
@@ -38,6 +38,31 @@
 
 <nz-card [nzActions]="[cardFoot]">
   <form nz-form>
+    <div nz-row [nzGutter]="24" >
+      <div nz-col [nzSpan]="24">            
+        <nz-form-item nzFlex>
+          <nz-form-label [nzSpan]="1">
+            {{ 'address' | i18n }}
+          </nz-form-label>
+          <nz-form-control [nzSpan]="20" nzHasFeedback nzErrorTip="{{ 'error.form.field.required' | i18n }}">
+            <!--
+              
+            <input nz-input ngx-google-places-autocomplete (onAddressChange)="handleNewCustomerAddressChange($event)" />
+            -->
+            <input #ngxPlaces="ngx-places"
+                nz-input 
+                class="input"
+                type="text"
+                ngx-gp-autocomplete
+                style="width: 500px"
+                (onAddressChange)="handleNewCustomerAddressChange($event)" />
+          </nz-form-control>
+        </nz-form-item>
+      </div>
+    </div>
+    
+    <!--
+      
     <div nz-row [nzGutter]="24">
       <div nz-col [nzSpan]="8">
         <nz-form-item nzFlex>
@@ -133,6 +158,8 @@
         </nz-form-item>
       </div>
     </div>
+    
+    -->
   </form>
 </nz-card>
 
